[package]
name = "light_epub"
version = "0.1.0"
edition = "2024"
authors = ["Muktadir"]
description = "A no_std ePub parser designed for speed, utilizing zero-copy access for book content and minimal allocations for metadata"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foxpc-ai/light_epub"
keywords = ["epub", "no_std", "embedded", "parser", "ebook"]
categories = ["parser-implementations", "embedded-hal", "parsing"]

[dependencies]
nom = { version = "8.0", default-features = false }

miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }

serde = { version = "1.0.228", default-features = false, optional = true, features = ["derive", "alloc"] }

quick-xml = { version = "0.38.4", default-features = false, features = ["serialize"]}

[features]

default = ["std"]

std = ["alloc", "nom/std", "serde?/std"]

alloc = ["quick-xml/serialize", "serde?/alloc"]